Add product model and controller
